tests/files/flow_controller_tests/should_run/048.cmdr
x = 4;
print sqrt(x);