tests/files/flow_controller_tests/should_fail/022.cmdr
x = false;
print sqrt(x);